--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,9 @@ body {
     background-color: blue;
 }
 
-html {
-    src: url('./assets/comic.ttf');
-    font-family: comicsans;
+@font-face {
+    font-family: "comicsans";
+    src: url("assets/comic.tff");
 }
 
 #title-image {
@@ -15,7 +15,7 @@ html {
 }
 
 .option-contain {
-    
+    padding: 10px 25em;
 }
 
 .options {
@@ -32,10 +32,15 @@ html {
     color: #FF3300;
 }
 
+#setting-image {
+    width: 100%;
+    height: auto;
+}
+
 #settings {
     position:fixed;
-    width: 10%;
-    height: 5%;
+    width: 50px;
+    height: 50px;
     right: 30px;
     background-color: purple;
 }
