--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,19 @@
 body {
-    background-color: blue;
+    background-color: black;
 }
 
 @font-face {
     font-family: "comicsans";
     src: url("assets/comic.tff");
 }
+
+.header {
+    color: white;
+}
+
+/* .stats-contain {
+    display: none;
+} */
 
 #title-image {
     display: block;
@@ -21,15 +29,15 @@ body {
 .options {
     width: 100%;
     height: 12.5%;
-    color: green;
+    color: ;
     font-family: comicsans !important;
     font-size: 22px;
-    background-color: #FF3300;
+    background-color: #CCCCCC;
 }
 
 .options:hover {
-    background-color: green;
-    color: #FF3300;
+    background-color: #8C8C8C;
+    color: black;
 }
 
 #setting-image {
@@ -42,11 +50,11 @@ body {
     width: 50px;
     height: 50px;
     right: 30px;
-    background-color: purple;
+    background-color: #CCCCCC;
 }
 
 #settings:hover {
-    background-color: white;
+    background-color: #8C8C8C;
 }
 
 .foot {
@@ -58,20 +66,4 @@ body {
 	margin: 0;
 	border:0;
     color: yellow;
-}
-
-.item {
-    font-family: 'Raleway', sans-serif;
-	font-size: 12px;
-	text-align: center;
-    width:25%
-	padding:0;
-	margin: 0;
-	border:0;
-    display: inline-block;
-    color: yellow;
-}
-
-.list {
-  	text-align: center;
 }
